--- a/Api/.travis.yml
+++ b/Api/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-  - "3.7.0" # 3.7 development branch
-# command to install dependencies
-virtualenv:
-  system_site_packages: true
+  - "3.6"
 install:
   - pip install -r requirements.txt
-# command to run tests
 script:
+  - py.test --cov-config .coveragerc --cov=app   Api/test/
+  - coverage report
+after_success:
+  - coveralls
   - pytest
