--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - py.test --cov-config .coveragerc --cov=app   Api/test/
+  - py.test --cov-config .coveragerc --cov=app test/
   - coverage report
 after_success:
   - coveralls
