--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 atomicwrites==1.2.1
 attrs==18.2.0
-autopep8==1.4
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
 coverage==4.5.1
-coveralls==1.5.0
-docopt==0.6.2
 Flask==1.0.2
+gunicorn==19.9.0
+heroku==0.1.4
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.3.0
-pep8==1.7.1
+pipenv==2018.7.1
 pluggy==0.7.1
 py==1.6.0
-pycodestyle==2.4.0
 pytest==3.8.0
-pytest-cov== 2.6.0
+python-dateutil==1.5
 requests==2.19.1
 six==1.11.0
 urllib3==1.23
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
 Werkzeug==0.14.1
-gunicorn==19.1.1
